# untitled-1

./: .dockerignore  .gitignore  Cargo.toml  Config.json  LICENSE  README.md  docker-compose.yml
dockerfiles/: Dockerfile.prod
src/: main.rs
src/algorithm/: algorithm_impl.rs  mod.rs
src/algorithm/crossover/: best.rs  crossover_impl.rs  mod.rs  random.rs
src/algorithm/fitness/: fitness_impl.rs  mod.rs  random.rs  strict_uniformity.rs  uniformity.rs
src/algorithm/mutate/: adaptive.rs  directed.rs  mod.rs  mutate_impl.rs  random.rs
src/algorithm/select/: best.rs  mod.rs  proportionate.rs  random.rs  select_impl.rs  truncation.rs
src/config/: algorithm.rs  asset_config.rs  config_impl.rs  crossover.rs  fitness.rs  mod.rs  mutate.rs  population.rs  select.rs
src/population/: gene.rs  individual.rs  mod.rs  population_impl.rs
src/utils/: asset.rs  assets.rs  gif.rs  grid.rs  mod.rs  plot.rs
