[package]
name = "untitled-1"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
gif = "0.13.1"
hex_color = "3.0.0"
image = "0.25.5"
log = "0.4.25"
plotters = "0.3.7"
rand = "0.9.0"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
simple_logger = "5.0.0"
